Eind tijd fucntioneel gemaakt met backend

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
                 <button mat-button (click)="clockOut()"  [disabled]= "clockedIn == false" class="mat-raised-button mat-basic">
                   Uitklokken
                 </button> <br>
-                <b>Ingeklokt: {{ startTime }}</b>
+                <b>Ingeklokt:</b> {{ startTime }}
                 <br>
                 <br>
                 <strong>Ingelogd: </strong>{{ dateTime }}
