--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -2,7 +2,8 @@
   <mat-sidenav #drawer mode="side" opened role="navigation">
     <mat-nav-list>
       <a mat-list-item routerLink='/account'><mat-icon>person</mat-icon> Account</a>
-      <a mat-list-item routerLink='/overview'><mat-icon>view_list</mat-icon> Overzicht</a>
+      <a mat-list-item routerLink='/account' *ngIf="isAdmin"><mat-icon>group</mat-icon> Gebruikers</a>
+      <a mat-list-item routerLink='/dashboard'><mat-icon>view_list</mat-icon> Overzicht</a>
       <a mat-list-item routerLink='/hours'><mat-icon>access_time</mat-icon> Uren</a>
       <a mat-list-item routerLink='/requests'><mat-icon> local_post_office</mat-icon> Verzoeken</a>
       <a mat-list-item routerLink='/login'(click)="logout()"><mat-icon> exit_to_app</mat-icon> Uitloggen</a>
